# skeleton-ui-mcp-server

./: README.md  index.py  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml  update-static.yml
skeleton_ui_mcp_server/: server.py
skeleton_ui_mcp_server/static/: _index.json  _llms.txt  _themes.json  design-system-colors.json  design-system-iconography.json  design-system-presets.json  design-system-spacing.json  design-system-themes.json  design-system-typography.json  framework-components-accordion.json  framework-components-app-bar.json  framework-components-avatar.json  framework-components-carousel.json  framework-components-collapsible.json  framework-components-combobox.json  framework-components-date-picker.json  framework-components-dialog.json  framework-components-file-upload.json  framework-components-floating-panel.json  framework-components-listbox.json  framework-components-menu.json  framework-components-navigation.json  framework-components-pagination.json  framework-components-popover.json  framework-components-portal.json  framework-components-progress-circular.json  framework-components-progress-linear.json  framework-components-rating-group.json  framework-components-segmented-control.json  framework-components-slider.json  framework-components-steps.json  framework-components-switch.json  framework-components-tabs.json  framework-components-tags-input.json  (+27 more)
static/: _index.json  _index_list.json  design-system-presets.json  design-system-spacing.json  framework-components-app-bar.json  framework-components-avatar.json  framework-components-carousel.json  framework-components-date-picker.json  framework-components-dialog.json  framework-components-listbox.json  framework-components-navigation.json  framework-components-progress-circular.json  framework-components-progress-linear.json  framework-components-toggle-group.json  get-started-core-api.json  get-started-fundamentals.json  get-started-introduction.json  get-started-migrate-from-v2.json  get-started-migrate-from-v3.json  guides-cookbook.json  integrations-bits-ui.json  integrations-code-block.json  integrations-melt-ui.json  integrations-radix-ui.json  tailwind-components-badges.json  tailwind-components-dividers.json  tailwind-components-placeholders.json
tests/: test_audit.py  test_tools.py
