[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skeleton-ui-mcp-server"
version = "0.1.4"
description = "MCP server exposing Skeleton UI (Svelte) documentation as tools for coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Gehrlein" }
]
keywords = ["mcp", "skeleton-ui", "svelte", "documentation", "coding-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.urls]
Repository = "https://github.com/dmglab/skeleton-ui-mcp-server"
Issues = "https://github.com/dmglab/skeleton-ui-mcp-server/issues"

[project.scripts]
skeleton-ui-mcp-server = "skeleton_ui_mcp_server.server:run"

[project.optional-dependencies]
fetch = [
    "httpx>=0.28.1",
    "python-slugify>=8.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["skeleton_ui_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["skeleton_ui_mcp_server/server.py", "index.py"]
